--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,4 +16,11 @@
   >
     Login
   </button>
+  <button
+    mat-raised-button
+    color="primary"
+    (click)="openMoviesDialog()"
+  >
+    All Movies
+  </button>
 </div>
