--- a/src/app/director/director.component.html
+++ b/src/app/director/director.component.html
@@ -1,7 +1,7 @@
 <p>director works!</p>
 <mat-card>
     <mat-card-header>
-        <mat-card-title>{{ Director's name }}</mat-card-title>
+        <mat-card-title>{{ this.director().Name }}</mat-card-title>
     </mat-card-header>
         <mat-card-content>
             {{Director's bio}}
