--- a/src/app/welcome-page/welcome-page.component.html
+++ b/src/app/welcome-page/welcome-page.component.html
@@ -13,6 +13,7 @@
     <button
       mat-raised-button
       color="primary"
+      (click)="openUserLoginDialog()"
     >
       Login
     </button>
