--- a/src/app/welcome-page/welcome-page.component.html
+++ b/src/app/welcome-page/welcome-page.component.html
@@ -17,4 +17,21 @@
     >
       Login
     </button>
+
+    <button
+    mat-raised-button
+    color="primary"
+    (click)="openUserLoginDialog()"
+  >
+    Profile
+  </button>
+
+  <button
+  mat-raised-button
+  color="primary"
+  (click)="openUserLoginDialog()"
+>
+  Movies
+</button>
+
   </div>
