--- a/src/app/movie-card/movie-card.component.html
+++ b/src/app/movie-card/movie-card.component.html
@@ -4,7 +4,7 @@
         <mat-card-title>{{movie.Title}}</mat-card-title>
             <mat-card-subtitle>Directed by: {{movie.Director.Name}}</mat-card-subtitle>
         </mat-card-header>
-        <img src={{movie.ImagePath}} alt= {{movie.Title}} />
+        <img src={{movie.ImagePath}} class="thumbnail" alt= {{movie.Title}} />
         <mat-card-actions>
             <button
                 mat-button
@@ -21,6 +21,7 @@
             <button
                 mat-button
                 color="primary"
+                (click)="openDirectorDialog()"
             >
                 Synopsis
             </button>
