--- a/src/app/welcome-page/welcome-page.component.html
+++ b/src/app/welcome-page/welcome-page.component.html
@@ -14,6 +14,7 @@
       mat-raised-button
       color="primary"
       (click)="openUserLoginDialog()"
+
     >
       Login
     </button>
@@ -21,7 +22,8 @@
     <button
     mat-raised-button
     color="primary"
-    (click)="openUserLoginDialog()"
+    (click)="openProfileDialog()"
+
   >
     Profile
   </button>
@@ -29,7 +31,8 @@
   <button
   mat-raised-button
   color="primary"
-  (click)="openUserLoginDialog()"
+  (click)="openMoviesDialog()"
+
 >
   Movies
 </button>
