update director and genre component

--- a/src/app/movie-card/movie-card.component.html
+++ b/src/app/movie-card/movie-card.component.html
@@ -15,6 +15,7 @@
             <button
                 mat-button
                 color="primary"
+                (click)="openGenreDialog()"
             >
                 Director
             </button>
