--- a/src/app/profile-view/profile-view.component.html
+++ b/src/app/profile-view/profile-view.component.html
@@ -1,1 +1,48 @@
-<p>profile-view works!</p>
+<mat-card>
+    <mat-card-header>
+      <mat-card-title>Edit User Profile!</mat-card-title>
+    </mat-card-header>
+    <mat-card-content>
+      <form>
+        <mat-form-field>
+          <input
+            matInput
+            [(ngModel)]="userData.Username"
+            placeholder="Username"
+            type="text"
+            name="Username"
+            required
+          >
+          </mat-form-field>
+      
+        <mat-form-field>
+          <input
+            matInput
+            [(ngModel)]="userData.Email"
+            type = "email"
+            placeholder="Email"
+            name="Email"
+            required
+          >
+        </mat-form-field>
+        <mat-form-field>
+          <input
+            matInput
+            [(ngModel)]="userData.Birthday"
+            type = "date"
+            placeholder="Birthday"  
+            name="Birthday"
+          >
+        </mat-form-field>
+      </form>
+    </mat-card-content>
+    <mat-card-actions>
+        <button
+          mat-raised-button
+          (click)="editUser()"
+          color="primary"
+        >
+         Edit
+        </button>
+    </mat-card-actions>
+</mat-card>
