--- a/src/app/movie-card/movie-card.component.html
+++ b/src/app/movie-card/movie-card.component.html
@@ -26,7 +26,10 @@
             >
                 Synopsis
             </button>
-            <mat-icon>favorite_border</mat-icon>
+            <mat-icon
+            (click)="Set Icon"
+            >
+            favorite_border</mat-icon>
         </mat-card-actions>
     </mat-card>
 </div>
