--- a/src/app/movie-card/movie-card.component.html
+++ b/src/app/movie-card/movie-card.component.html
@@ -26,9 +26,7 @@
             >
                 Synopsis
             </button>
-            <mat-icon
-            (click)="Set Icon"
-            >
+            <mat-icon>
             favorite_border</mat-icon>
         </mat-card-actions>
     </mat-card>
