--- a/src/app/genre/genre.component.html
+++ b/src/app/genre/genre.component.html
@@ -2,10 +2,10 @@
 <p>director works!</p>
 <mat-card>
     <mat-card-header>
-        <mat-card-title>{{ this.genre() }}</mat-card-title>
+      <!--  <mat-card-title>{{ this.genre() }}</mat-card-title> -->
     </mat-card-header>
         <mat-card-content>
-            {{ Genre }}
+           <!-- {{ Genre }}-->
         </mat-card-content>
 
 </mat-card>
