--- a/src/app/movie-card/movie-card.component.scss
+++ b/src/app/movie-card/movie-card.component.scss
@@ -1,4 +1,15 @@
+$backgroundColor: #87CEEB;
+$cardColor: #D4E4F7;
+$textColor: #000000;
+$boxShadowColor: #2369B8;
+$buttonColor: #FD7208;
+
+
 .thumbnail {
     width: 250px;
     height: 250px;
+}
+
+.background {
+    background-color: #87CEEB; 
 }
