--- a/src/app/genre/genre.component.html
+++ b/src/app/genre/genre.component.html
@@ -1,11 +1,10 @@
 <p>genre works!</p>
-<p>director works!</p>
 <mat-card>
     <mat-card-header>
-      <!--  <mat-card-title>{{ this.genre() }}</mat-card-title> -->
+        <mat-card-title></mat-card-title> 
     </mat-card-header>
         <mat-card-content>
-           <!-- {{ Genre }}-->
+           {{ data.Description }}
         </mat-card-content>
 
 </mat-card>
