--- a/src/app/director/director.component.html
+++ b/src/app/director/director.component.html
@@ -1,10 +1,12 @@
-<p>director works!</p>
-<!--<mat-card>
+
+<mat-card>
     <mat-card-header>
-        <mat-card-title>{{ this.director().Name }}</mat-card-title>
+        <mat-card-title>
+          <p>  {{ data.Name }} </p>
+        </mat-card-title> 
     </mat-card-header>
         <mat-card-content>
-            
+           {{ data.Bio }}
         </mat-card-content>
 
-</mat-card>-->
+</mat-card>
